objects/Property_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Acquire_Property_By__c</fullName>
        <label>Acquire Property By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Price__c</fullName>
        <label>Actual Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Reference__c</fullName>
        <displayFormat>BRef-{000}</displayFormat>
        <label>Booking Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Property Bookings</relationshipLabel>
        <relationshipName>Property_Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Bookings</relationshipLabel>
        <relationshipName>Property_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quotation_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quotation Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Price__c</fullName>
        <label>Quote Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Sent for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Property Booking</label>
    <nameField>
        <displayFormat>PB Id-{0000}</displayFormat>
        <label>Property Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>